[gd_scene load_steps=4 format=3 uid="uid://bctyv064q06ru"]

[ext_resource type="Script" uid="uid://dbsmmof13wqwf" path="res://scenes/game_world/terrain/main_terrain/underwater/underwater_zone.gd" id="1_en1wn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nyqno"]
size = Vector3(101, 20, 512)

[sub_resource type="BoxShape3D" id="BoxShape3D_2ijyl"]
size = Vector3(35.524, 20, 179.025)

[node name="UnderwaterZone" type="Area3D"]
gravity_space_override = 3
gravity = 3.0
script = ExtResource("1_en1wn")

[node name="CollisionShape3D_NX" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -552, -15, -1)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_NZ" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, -15, -547)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_X" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 552, -15, 2)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_Z" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -15, 554)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_NXZ" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -395.768, -15, 383.768)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_NZX" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 392.657, -15, -386.657)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_NXNZ" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -396.768, -15, -381.232)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D_XZ" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 374.232, -15, 395.768)
shape = SubResource("BoxShape3D_nyqno")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.79771, 0, 0.603041, 0, 1, 0, -0.603041, 0, 0.79771, 123.51, -15, -433.462)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999916, 0, 0.0129848, 0, 1, 0, -0.0129848, 0, 0.999916, 180.686, -15, -290.085)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(0.807434, 0, -0.589958, 0, 1, 0, 0.589958, 0, 0.807434, 123.51, -15, -185.664)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(0.177617, 0, -0.9841, 0, 1, 0, 0.9841, 0, 0.177617, 11.624, -15, -126.852)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(0.328982, 0, 0.944336, 0, 1, 0, -0.944336, 0, 0.328982, -88.069, -15, -153.03)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(0.79771, 0, 0.603041, 0, 1, 0, -0.603041, 0, 0.79771, -166.245, -15, -234.434)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="."]
transform = Transform3D(0.994119, 0, -0.108294, 0, 1, 0, 0.108294, 0, 0.994119, -174.135, -15, -348.472)
shape = SubResource("BoxShape3D_2ijyl")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="."]
transform = Transform3D(0.690074, 0, -0.723738, 0, 1, 0, 0.723738, 0, 0.690074, -104.206, -15, -448.882)
shape = SubResource("BoxShape3D_2ijyl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
